- Renomeado login.html para index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style/login-style.css" type="text/css">
+    <link rel="stylesheet" href="./Login/style/login-style.css" type="text/css">
 </head>
 <body>
     <div class="grid-conteiner">
@@ -27,7 +27,7 @@
                 <label for="">Google</label>
                 <label for="">Apple</label>
             </div>
-            <span class="dont-account"> Don't have account? <b>sing up</b></span>
+            <span class="dont-account"> Don't have account? <b><a href="https://github.com/DanielBartelli/TrelloTaskEX/blob/master/cadastro/cadastro.html">Sing up</a></b></span>
         </div>
     </div>
 
