add link login na pagina de cadastro

--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -23,7 +23,7 @@
         
                 <button class="mt-14"> Sing Up </button>
 
-                <p class="mt-14">Already have an account? <b>Login In</b></p>
+                <p class="mt-14">Already have an account? <b><a href="../index.html">Login In</a></b></p>
             </div>
        </div>
 
